WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153640
Shrink CodeBlock!
https://bugs.webkit.org/show_bug.cgi?id=153640
Summary
Shrink CodeBlock!
Andreas Kling
Reported
2016-01-28 21:42:04 PST
Let's do some "MEMBER RESHUFFLING" to save memory here.
Attachments
Patch for EWS
(16.87 KB, patch)
2016-01-28 21:46 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch for landing
(19.82 KB, patch)
2016-01-29 11:34 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-01-28 21:46:43 PST
Created
attachment 270181
[details]
Patch for EWS This patch knocks 104 bytes off of CodeBlock (Ha!)
WebKit Commit Bot
Comment 2
2016-01-28 21:47:37 PST
Attachment 270181
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1813: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1818: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1819: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1820: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1821: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 5 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2016-01-29 11:09:39 PST
nice. r=me
Andreas Kling
Comment 4
2016-01-29 11:19:55 PST
(In reply to
comment #3
)
> nice. > r=me
v.nice let me shuffle the bitfields around a little more and save 8 additional bytes :)
Saam Barati
Comment 5
2016-01-29 11:27:30 PST
sweet. I'm going to start investigating getting rid of a few fields.
Andreas Kling
Comment 6
2016-01-29 11:34:18 PST
Created
attachment 270229
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2016-01-29 11:36:16 PST
Attachment 270229
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1814: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1818: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1819: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1820: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/bytecode/CodeBlock.cpp:1821: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 5 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8
2016-01-29 12:38:00 PST
Comment on
attachment 270229
[details]
Patch for landing Clearing flags on attachment: 270229 Committed
r195836
: <
http://trac.webkit.org/changeset/195836
>
WebKit Commit Bot
Comment 9
2016-01-29 12:38:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug