Shrink CodeBlock! <https://webkit.org/b/153640>

Reviewed by Saam Barati.

Shrink CodeBlock by 112 bytes (from 640 to 528) by employing
these sophisticated tricks:

    - Remove members that are not used by anyone.
    - Don't cache both VM* and Heap* in members.
    - Reorder members to minimize struct padding.
    - Use RefCountedArray instead of Vector for arrays that never resize.
    - Put a not-always-present HashMap in a std::unique_ptr.

This increases CodeBlock space efficiency by 20%, as we can now
fit 30 of them in a MarkedBlock, up from 25.)

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock):
(JSC::CodeBlock::finishCreation):
(JSC::CodeBlock::setNumParameters):
(JSC::CodeBlock::jettison):
(JSC::CodeBlock::noticeIncomingCall):
(JSC::CodeBlock::resultProfileForBytecodeOffset):
* bytecode/CodeBlock.h:
(JSC::CodeBlock::setJITCode):
(JSC::CodeBlock::capabilityLevelState):
(JSC::CodeBlock::codeType):
(JSC::CodeBlock::ensureResultProfile):
(JSC::CodeBlock::heap):


Canonical link: https://commits.webkit.org/171724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195836 268f45cc-cd09-0410-ab3c-d52691b4dbfc